# fastware

./: .gitignore  .gitmodules  BCountDigits.ml  BListVsArray.ml  GCD1.ml  GCDs.cpp  Makefile  README.md  Various1.ml  cmain.cpp  dune  dune-project  file1.c  flagsBench.ml  flagsImpl.c  gcd.h  leven1.ml  levenC.c  msbpos.cpp  smth1.c
ILPsum/: Makefile  main.cpp
TotalArea/: Makefile  main.cpp
ascii_validation/: ascii.ml  ascii_c.S  ascii_c.c  dune
computer-enhance/intro/: 1.t  benches.cpp  benches.s  dune
concat_str/: README.md  bench_str.ml  dune
cps/: .gitignore  README.md
cps/chicken/: Makefile  fib.scm
cps/haskell/: .gitignore  Makefile
cps/haskell/src/: Main.hs
cps/mlton/: Fib.mlb  Main.sml  Makefile  README
cps/ocaml/: Makefile  bench_fib.ml  dflambda.txt  dune
cps/racket/: .gitignore  Makefile  fib_bench.rkt
exesize/: a.ml  dune
float/: dune  fast_float_caml.cpp  floats.ml
haskell/: CHANGELOG.md  LICENSE  Makefile  bench-cps.cabal
haskell/src/: Main.hs
log/: dune  log_main.ml
polycomp/: dune  polycomp.ml
primes/: dune  primes.ml
remove_spaces/: dune  lib1.ml  remove_spaces.ml
sort/: dune  insertion.ml  insertion_bench.ml
startup/: Makefile  hello-ocaml.ml  hello.c  hello.dart  hello.hs
