(executable
 (name BCountDigits)
 (modules BCountDigits)
 (libraries benchmark base)
 (foreign_stubs
  (language c)
  (names file1)))

(rule
 (targets ctest.exe)
 (action
  (run
   c++
   -march=native
   -O3
   -g
   -I/usr/include/benchmark
   -o
   %{targets}
   cmain.cpp
   /usr/lib/x86_64-linux-gnu/libbenchmark.so
   -lpthread)))

(executable
 (name leven1)
 (libraries base benchmark)
 (modules leven1))

(rule
 (targets levenC.exe)
 (action
  (run gcc -march=native -O3 levenC.c -o levenC.exe)))

(executable
 (name BListVsArray)
 (modules BListVsArray)
 (libraries base benchmark)
 (ocamlopt_flags
  (:standard -S -g)))

(executable
 (name flagsBench)
 (modules flagsBench)
 (libraries base benchmark)
 (foreign_stubs
  (language c)
  (flags -march=native -O3 -Wall)
  (names flagsImpl))
 (ocamlopt_flags
  (:standard -S -g)))

(rule
 (targets msbpos.exe)
 (deps msbpos.cpp)
 (action
  (run c++ -march=native -O3 -g -o %{targets} msbpos.cpp)))

(executable
 (name Various1)
 (modules Various1)
 (libraries benchmark)
 (ocamlopt_flags
  (:standard -S -g)))

(executable
 (name GCD1)
 (modules GCD1)
 (libraries benchmark)
 (foreign_stubs
  (language cxx)
  (flags -std=c++20 -march=native -O3 -Wall)
  (names GCDs))
 (ocamlopt_flags
  (:standard -S -g)))
